--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -14,13 +14,15 @@ spec:
     spec:
       containers:
       - name: flask-backend
-        # TODO: Replace <DockerHub-Username> with your Docker Hub username, and use the appropriate image name and tag
-        image: <DockerHub-Username>/<backend-image-name>:<backend-image-tag>
+        # DONE: Replace <DockerHub-Username> with your Docker Hub username, and use the appropriate image name and tag
+        image: rishimandyam12/backend:1.0.0
         ports:
         - containerPort: 5001
         lifecycle:
           preStop:
-            ## TODO: implement this so that backend.py handles SIGTERM and logs a message
+            ## DONE: implement this so that backend.py handles SIGTERM and logs a message
+            command: ["sh", "-c", "echo 'Received SIGTERM in backend pod, shutting down gracefully...' >> /tmp/shutdown.log"]
+
 
         volumeMounts:
         - name: model-volume
@@ -34,7 +36,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name:  flask-backend-service # TODO: Specify a unique service name if deploying multiple services
+  name:  flask-backend-service # DONE: (NO CHANGE) Specify a unique service name if deploying multiple services
 spec:
   type: ClusterIP
   selector:
