--- a/load-balancer-deployment.yaml
+++ b/load-balancer-deployment.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
       - name: flask-load-balancer
-        # TODO: Replace <DockerHub-Username> with your Docker Hub username, and use the appropriate image name and tag
-        image: <DockerHub-Username>/<load-balancer-image-name>:<load-balancer-image-tag>
+        # DONE: Replace <DockerHub-Username> with your Docker Hub username, and use the appropriate image name and tag
+        image: rishimandyam12/loadbalancer:1.0.0
         ports:
         - containerPort: 8080
 ---
