--- a/load-balancer-deployment.yaml
+++ b/load-balancer-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: flask-load-balancer
         # DONE: Replace <DockerHub-Username> with your Docker Hub username, and use the appropriate image name and tag
-        image: rishimandyam12/loadbalancer:1.0.0
+        image: rmandyam12/loadbalancer:1.0.0
         ports:
         - containerPort: 8080
 ---
